# TradingAgents

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-27-china-market-adaptation.md
docs/superpowers/specs/: 2026-06-27-china-market-adaptation-design.md  2026-06-27-multi-tenant-web-service-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css  viteDevProxy.test.ts
frontend/src/components/: MetricGrid.vue  PageHeader.vue  ReportMarkdown.vue
frontend/src/i18n/: i18n.test.ts  index.ts  messages.ts
frontend/src/layout/: AppLayout.test.ts  AppLayout.vue
frontend/src/pages/: AnalyzePage.vue  AutomationsPage.vue  DashboardPage.vue  PortfolioPage.vue  RunsPage.vue  SettingsPage.vue  WorkspacePage.vue  analyzeStockSelection.test.ts  analyzeStockSelection.ts  automationPayload.test.ts  automationPayload.ts
frontend/src/router/: index.ts  pages.test.ts  pages.ts
frontend/src/services/: api.test.ts  api.ts
tests/: conftest.py  test_artifact_store.py  test_china_macro.py  test_china_market_profile.py  test_china_market_signals.py  test_china_news.py  test_china_prompting.py  test_dataflows_config.py  test_deploy_script.py  test_env_overrides.py  test_event_publisher.py  test_fred.py  test_polymarket.py  test_run_claims.py  test_run_repository.py  test_run_service.py  test_runtime_admin.py  test_runtime_context.py  test_service_models.py  test_settings.py  test_sqlite_state_backend.py  test_state_backend.py  test_stock_catalog.py  test_stock_catalog_routes.py  test_vendor_errors.py  test_vendor_routing.py  test_web_app_startup.py  test_web_auth.py  test_web_automation.py  test_web_routes.py  test_web_runner.py  test_web_runtime_routes.py  test_web_spa_entry.py  test_web_state.py  test_web_ui_runtime_sections.py  test_web_worker.py  test_webhook_delivery.py  test_worker_status.py  test_yfinance_stale_ohlcv_guard.py
tradingagents/: __init__.py  default_config.py  settings.py
tradingagents/dataflows/: __init__.py  alpha_vantage_common.py  alpha_vantage_indicator.py  china_macro.py  china_market_signals.py  china_news.py  config.py  interface.py  market_profiles.py  reddit.py  stocktwits.py  y_finance.py
tradingagents/graph/: event_processor.py  trading_graph.py
tradingagents/llm_clients/: azure_client.py  bedrock_client.py  model_catalog.py
tradingagents/service/: __init__.py  artifact_store.py  event_publisher.py  execution_lock.py  models.py  run_claims.py  run_repository.py  run_service.py  run_state_codec.py  runtime_admin.py  runtime_context.py  sqlite_state.py  state_backend.py  stock_catalog.py  web_state.py  worker_status.py
web/: __init__.py  app.py  auth.py  automation.py  routes.py  runner.py  schemas.py  webhook_delivery.py  worker.py  workspace_import.py
web/static/: app.js  app.webmanifest  service-worker.js  style.css
web/templates/: index.html
(+38 files in other folders)
